update methods and results in master .Rmd file

--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -34,7 +34,7 @@ Lichens were categorised according to both (1) taxonomic and (2) functional grou
 
 The following functional traits were recorded for each tree: (1) girth, measured by $\dots$; (2) bark type (DR = dry ancient, S = smooth, C = scaly, R = ridged/rough); (3) the presence of buttresses or flutes; and (4) dipterocarp vs. non-dipterocarp species. Additionally, for the majority of trees, (5) bark pH was determined from the mean of up to three readings, measured by $\dots$.
 
-Tree girth and mean pH were converted into categorical variables (girth: s < 100 cm; m = 100--199 cm; l $\geq$ 200 cm; pH: vl, l, m and h, based on quartiles calculated from the overall distribution of per-tree pH values.^[Quartile values were calculated using the default continuous sample quantile 'Type 7' via the R `quantile` function. Also, missing pH values are no longer replaced with the mean pH for the corresponding bark type.]
+Tree girth and mean pH were converted into categorical variables (girth: s < 150 cm and l $\geq$ 150 cm, based on a discontinuity in the distribution of girth values in the logged site compared to the other two sites; pH: vl, l, m and h, based on quartiles calculated from the overall distribution of per-tree pH values.^[Quartile values were calculated using the default continuous sample quantile 'Type 7' via the R `quantile` function. Also, missing pH values are no longer replaced with the mean pH for the corresponding bark type.]
 
 ```{r nobs_tables, eval = FALSE, echo = FALSE}
 # check actual numbers of replicates per site
@@ -446,15 +446,13 @@ Indicator Value analysis output (trait classes):
 cat(indval_traits_plot_summ, sep = "\n")
 ```
 
-The diversity of bark types and proportion of dipterocarps within plots were identified as key tree functional traits influencing lichen community structure, in terms of both taxonomic and functional groups (BIOENV; $\rho$ = `r rep_2dp(bioenv_taxa_plot_rho)` and $\rho$ = `r rep_2dp(bioenv_func_plot_rho)`, respectively) and lichen trait classes ($\rho$ = `r rep_2dp(bioenv_traits_plot_rho)`).
+The diversity of bark types and proportions of large trees and dipterocarps within plots were identified as key tree functional traits influencing lichen community structure, in terms of both taxonomic and functional groups (BIOENV; $\rho$ = `r rep_2dp(bioenv_taxa_plot_rho)` and $\rho$ = `r rep_2dp(bioenv_func_plot_rho)`, respectively) and lichen trait classes ($\rho$ = `r rep_2dp(bioenv_traits_plot_rho)`).
 
-In all three cases, CAP (dbRDA) axis 1 correlated negatively with both plot-level tree traits, while axis 2 appeared to be related positively to bark diversity and negatively to dipterocarp proportion; the overall analysis was significant, as determined by permutation tests (taxonomic groups: P `r rep_p(cap_taxa_plot_p)`; functional groups: P `r rep_p(cap_func_plot_p)`; trait classes: P `r rep_p(cap_traits_plot_p)`).
+In all three cases, CAP (dbRDA) axis 1 correlated negatively with all three plot-level tree traits, while axis 2 appeared to be related positively to bark diversity and negatively to the proportions of large trees and dipterocarps; the overall analysis was significant, as determined by permutation tests (taxonomic groups: P `r rep_p(cap_taxa_plot_p)`; functional groups: P `r rep_p(cap_func_plot_p)`; trait classes: P `r rep_p(cap_traits_plot_p)`). However, none of the three environmental variables were significantly related either to lichen community structure or functional trait composition, as determined by marginal permutational tests.
 
-However, only the proportion of dipterocarps (and not bark type diversity) was significantly related to lichen community structure (taxonomic groups: pseudo-_F_~1,19~ = `r rep_2dp(cap_taxa_plot_margin_f["dipterocarp_prop"])`, P `r rep_p(cap_taxa_plot_margin_p["dipterocarp_prop"])`; functional groups: pseudo-_F_~1,19~ = `r rep_2dp(cap_func_plot_margin_f["dipterocarp_prop"])`, P `r rep_p(cap_func_plot_margin_p["dipterocarp_prop"])`) and functional trait composition (pseudo-_F_~1,19~ = `r rep_2dp(cap_traits_plot_margin_f["dipterocarp_prop"])`, P `r rep_p(cap_traits_plot_margin_p["dipterocarp_prop"])`).
+Taxonomic groups [_ArC_, _Gr-th_ and _R-Py_] and functional groups [_crbys_, _crmzs_, _crpeb_, and _crthe_] appeared to be associated relatively strongly with plot-level bark diversity. Conversely, groups [_ArC_] and [_crstlf_] were negatively associated with the proportions of large trees and dipterocarps and, to a lesser extent, bark diversity.
 
-Taxonomic groups [_ArA_, _ArT_, _CnS_, _CoC_, _Gr-th_, _PyP_, _R-Py_, _ThM_, _TryP_ and _VeFl_] and functional groups [_crbya_, _crbys_, _crlir_, _crmzs_, _crpeb_, _crspe_, _crthe_, _focyr_ and _sqhya_] appeared to be associated strongly with plot-level bark diversity. Taxa [_Gr-Li_, and _R-Es_] were also associated with bark diversity, but showed a stronger association with the proportion of dipterocarps. Conversely, groups [_ArC_ and _Uicr_] and [_crstlf_] were negatively associated with both bark diversity and proportion of dipterocarps.
-
-In terms of lichen traits, carbonised perithecia, apothecia without margins and thelotremoid apothecia were associated with bark diversity and, to a lesser degree, the proportion of dipterocarps; unknown Chlorophyta photobiont, presence of hypothallus, squamulose growth type and vegetative dispersal structures were associated more strongly with proportion of dipterocarps. Crustose growth type, Trentepohliaceae photobiont, ?absence of vegetative dispersal structures and absence of hypothallus exhibited a strongly negative association with the proportion of dipterocarps.
+In terms of lichen traits, squamulose growth type, unknown Chlorophyta photobiont, apothecia without margins, vegetative dispersal structures and presence of hypothallus were associated with bark diversity and the proportion of dipterocarps. Crustose growth type, Trentepohliaceae photobiont, non-carbonised perithecia, ?absence of vegetative dispersal structures and absence of hypothallus exhibited a negative association with the proportion of dipterocarps and bark diversity.
 
 ![(a) CAP ordination plot of lichen community structure (taxonomic groups) according to continuous environmental (tree trait) variables, based on 'plot-level' data summarised for each plot. (b) Spearman rank correlation coefficients between CAP axes and individual taxa for which $|\rho| \geq$ `r cor_spp_x`.](./figs/cap_taxa_plot.pdf)
 
